Minor UX fixes
* The "show more/less" buttons in sites like "Add host" is now
  rendered with text as well.
* Fix typo "right" instead of "Right" in the "User" menu.
* Remove overspecific CSS selector in dashlets that made warning
  messages unreadable.
* Use "visibility: hidden" to remove a gap in the in-page menu in
  Chrome. Remove an unnecessary "display: table-row" along the way.
* Set a background for the content_area div so that no white color
  is visible in Chrome for a short time when a page is loaded.
* Move the background color from td.heading to td so that it works
  in Firefox as well.

--- a/web/htdocs/themes/facelift/scss/_pages.scss
+++ b/web/htdocs/themes/facelift/scss/_pages.scss
@@ -883,7 +883,6 @@ table.nform {
 
   tr.heading {
     height: auto;
-    background: $headline-color;
 
     > td {
       vertical-align: middle;
@@ -897,9 +896,10 @@ table.nform {
       height: auto;
       padding: 4px 10px 3px 9px;
       font-size: $font-size-global;
+      font-weight: $font-weight-bold;
       letter-spacing: $letter-spacing-table;
       color: $secondary-font-color;
-      text-transform: uppercase;
+      background-color: $headline-color;
     }
 
     img.treeangle.nform {
@@ -911,7 +911,7 @@ table.nform {
 
       div::after {
         position: relative;
-        top: 2px;
+        top: 1px;
       }
     }
   }
