--- a/web/htdocs/themes/facelift/scss/_sidebar.scss
+++ b/web/htdocs/themes/facelift/scss/_sidebar.scss
@@ -119,7 +119,7 @@ body.side {
   width: auto;
   height: 100%;
   overflow: hidden;
-  background: #fff;
+  background: $bg-color;
 }
 
 #content_area iframe {
